# DeFiGuardian

./: .gitignore  README.md
ML_bot/: DefGuard_MLbot.ipynb  eth_fraud_xgb.json  preprocessors.pkl
agent/: .env  README.md  main.py  pyproject.toml
agent/models/: README.md
agent/src/: __init__.py  etherscan.py  features.py  model.py
contracts/: CrossChainMessenger.sol  ENSSecurityProfile.sol  GuardianRegistry.sol  SecurityMiddleware.sol
contracts/hooks/: GuardianHook.sol  README.md  foundry.toml
contracts/interfaces/: ILayerZeroEndpoint.sol
contracts/verifiers/: FROSTVerifier.sol  VDFVerifier.sol
deguard/: next.config.ts  package.json  tailwind.config.ts
deguard/app/: globals.css  layout.tsx  page.tsx
deguard/components/: ExchangeCard.tsx  Header.tsx  MobileMenu.tsx
deploy/: .env.example  .gitignore  README.md  hardhat.config.ts  package.json  tsconfig.json
deploy/scripts/: deploy-local.ts  setup-contracts.sh  start-local.sh  update-sdk-addresses.ts
docs/: ENS_SECURITY_PROFILES.md  LIFI_INTEGRATION.md
frontend/app/: page.tsx
frontend/components/: Header.tsx  MobileMenu.tsx
guardian-mock/src/: server.ts
lib/frost/: README.md  package.json
lib/vdf/: SETUP.md  package.json  tsconfig.json
lib/vdf-worker/: package.json
lib/zk/: .gitignore  README.md  info.md  package.json  tsconfig.json
sdk/: index.ts  package.json  tsconfig.json
sdk/core/: VDF.ts  ZK.ts  adapters.ts  constants.ts  contract.ts  crosschain.ts  ens.ts  lifi.ts  middleware.ts
sdk/mockExamples/: README.md  bigTxFail.ts  bigTxPass.ts  ensSecurityDemo.ts  runAll.ts  (+1 more)
(+47 files in other folders)
